# sssd

./: .clang-format  .git-commit-template  .git-commit-template-tests  .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  1  BUILD.txt  Dockerfile  Dockerfile.deps  Jenkinsfile  Makefile  Makefile.am  README  README.md  SECURITY.md  Vagrantfile  configure.ac  minimal-provider-notes.txt  sbus_generate.sh  sbus_generate.sh.in  setup.cfg  sssd.spec  sssd.spec.in  version.m4  zanata.xml
common/: Makefile.am  README  configure.ac
common/collection/: Makefile.am  README  collection.c  collection.cfg.doxy.in  collection.h  collection.pc.in  collection_cmp.c  collection_cnv.c  collection_iter.c  collection_priv.h  collection_queue.c  collection_queue.h  collection_queue_ut.c  collection_stack.c  collection_stack.h  collection_stack_ut.c  collection_tools.c  collection_tools.h  collection_ut.c  configure.ac
common/dhash/: Makefile.am  README  configure.ac  dhash.c  dhash.h  dhash.pc.in  dhash_example.c  dhash_test.c
common/elapi/: Makefile.am  conf_macros.m4  configure.ac  def_macros.m4  elapi.h  elapi.pc.in  elapi_async.c  elapi_async.h  elapi_basic.c  elapi_basic.h  elapi_defines.h  elapi_event.c  elapi_event.h  elapi_fd.h  elapi_internal.c  elapi_ioctl.c  elapi_ioctl.h  elapi_log.c  elapi_log.h  elapi_net.h  elapi_priv.h  elapi_resolve.c  elapi_sink.c  elapi_sink.h  elapi_subst.c  elapi_tm.h  elapi_ut.c  elapi_ut.conf
common/ini/: Makefile.am  README  configure.ac  ini.conf  ini_comment.c  ini_comment.h  ini_comment_ut.c  ini_config.c  ini_config.cfg.doxy.in  ini_config.h  ini_config.pc.in  ini_config_ut.c  ini_defines.h  ini_get_array.c  ini_get_value.c  ini_list.c  ini_metadata.c  ini_metadata.h  ini_parse.c  ini_parse.h  ini_print.c
common/path_utils/: Makefile.am  README  configure.ac  path_utils.c  path_utils.cfg.doxy.in  path_utils.h  path_utils.pc.in  path_utils_ut.c
common/refarray/: Makefile.am  README  configure.ac  ref_array.c  ref_array.cfg.doxy.in  ref_array.h  ref_array.pc.in  ref_array_ut.c
common/trace/: Makefile.am  trace.h
replace/: Makefile.am  Makefile.in  build_macros.m4  configure.ac  getpass.ho  libreplace.m4  libreplace_cc.m4  libreplace_macros.m4  libreplace_network.m4  replace.ho  snprintf.ho
server/: Makefile.am  Makefile.in  autogen.sh  build_macros.m4  conf_macros.m4  configure.ac  monitor.c  monitor.h  process.c  process.h  rules.mk  sbus_interfaces.h  server.c  server.mk  service.c  service.h  service_proto.h  service_task.c  service_task.h
server/confdb/: confdb.c  confdb.h  confdb_private.h  confdb_setup.c  confdb_setup.h
server/config/: SSSDConfig.py  SSSDConfigTest.py  ipachangeconf.py  setup.py  upgrade_config.py
server/db/: sysdb.c  sysdb.h  sysdb_internal.h  sysdb_ops.c  sysdb_private.h  sysdb_req.c  sysdb_search.c  sysdb_sync.c
server/dbus/: sssd_dbus.h  sssd_dbus_client.c  sssd_dbus_client.h  sssd_dbus_common.c  sssd_dbus_common.h  sssd_dbus_connection.c  sssd_dbus_private.h  sssd_dbus_server.c  sssd_dbus_server.h
server/examples/: config.ldif  db.ldif  sssd.conf  sssdproxylocal  sssdproxytest
server/infopipe/: infopipe.c  infopipe.h  infopipe_groups.c  infopipe_private.h  infopipe_users.c  org.freedesktop.sssd.infopipe.Introspect.xml  org.freedesktop.sssd.infopipe.conf  org.freeipa.sssd.infopipe.Introspect.xml  org.freeipa.sssd.infopipe.conf  sysbus.c  sysbus.h
server/krb5_plugin/: sssd_krb5_locator_plugin.c  sssd_krb5_locator_plugin.h
server/ldb_modules/: ldb_module.h  memberof.c
server/man/: sss_groupadd.8.xml  sss_groupdel.8.xml  sss_groupmod.8.xml  sss_groupshow.8.xml  sss_useradd.8.xml  sss_userdel.8.xml  sss_usermod.8.xml  sssd-ipa.5.xml  sssd-krb5.5.xml  sssd-ldap.5.xml  sssd.8.xml  sssd.conf.5.xml
server/monitor/: monitor.c  monitor.h  monitor_interfaces.h  monitor_sbus.c  monitor_sbus.h
server/nss/: nss_ldb.h  nsssrv.c  nsssrv.h  nsssrv_cmd.c  nsssrv_dp.c  nsssrv_ldb.c  nsssrv_ldb.h  nsssrv_packet.c
server/po/: LINGUAS  Makevars  POTFILES.in  de.po  es.po  it.po  ja.po  nl.po  pl.po  pt.po  sss_daemon.pot  sv.po
server/polkit/: sssd_polkit.c  sssd_polkit.h
server/providers/: child_common.c  child_common.h  data_provider.c  data_provider.h  data_provider_be.c  data_provider_fo.c  data_provider_opts.c  dp_auth_util.c  dp_backend.h  dp_backend_store.c  dp_helpers.c  dp_interfaces.h  dp_sbus.c  dp_sbus.h  fail_over.c  fail_over.h  ldap_be.c  ldap_provider.c  providers.h  proxy.c
server/python/: pysss.c
server/resolv/: async_resolv.c  async_resolv.h
server/sbus/: sbus_client.c  sbus_client.h  sssd_dbus.h  sssd_dbus_common.c  sssd_dbus_connection.c  sssd_dbus_private.h  sssd_dbus_server.c
server/sss_client/: conf_macros.m4  sss_pam_macros.h
server/sysv/: sssd
server/tests/: auth-tests.c  check_and_open-tests.c  common.c  common.h  fail_over-tests.c  files-tests.c  find_uid-tests.c  infopipe-privileged-tests.c  infopipe-tests.c  ipa_ldap_opt-tests.c  ipa_timerules-tests.c  krb5_utils-tests.c  python-test.py  refcount-tests.c  resolv-tests.c  stress-tests.c  strtonum-tests.c  sysdb-tests.c
server/tools/: sss_groupadd.c  sss_groupdel.c  sss_groupmod.c  sss_groupshow.c  sss_sync_ops.c  sss_sync_ops.h  sss_useradd.c  sss_userdel.c  sss_usermod.c  tools_util.c  tools_util.h
server/upgrade/: upgrade_config.py
server/util/: become_daemon.c  btreemap.c  btreemap.h  crypto_sha512crypt.c  debug.c  dlinklist.h  files.c  find_uid.c  memory.c  nss_sha512crypt.c  nss_sha512crypt.h  refcount.c  refcount.h  server.c  service_helpers.c  service_helpers.h  signal.c  signal.m4  sss_krb5.c  sss_krb5.h  sss_ldap.c  sss_ldap.h  sssd-i18n.h  strtonum.c  user_info_msg.c  user_info_msg.h  usertools.c  util.c  util.h
src/: Makefile.am  build_macros.m4  conf_macros.m4  configure.ac  doxy.config.in  sssd-compile-warnings.m4
src/confdb/: confdb.c  confdb.h  confdb_setup.c  confdb_setup.h
src/config/: SSSDConfig.py  SSSDConfigTest.py  SSSDConfigTest.py2.sh  (+7 more)
sss_client/: Makefile.am  Makefile.in  common.c  configure.ac  group.c  pam_sss.c  pam_test_client.c  passwd.c  sss_cli.h
(+2473 files in other folders)
